# OzonParser

./: .env.example  .gitignore  AI_USAGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: demo_run.txt
docs/: task.txt
src/: config.py  main.py
src/crm/: amocrm_client.py  task_selector.py
src/http/: __init__.py  rate_limit.py
src/llm/: cache.py  classifier.py  prompts.py  schemas.py
src/models/: __init__.py  product.py
src/normalizer/: normalizer.py
src/parser/: mock_data.py  ozon_client.py  ozon_parser.py
src/pipeline/: orchestrator.py  reporter.py
src/storage/: checkpoint.py
tests/: test_crm.py  test_llm.py  test_normalizer.py  test_parser.py  test_pipeline.py  test_rate_limit.py
tests/fixtures/: ozon_page.json
